RESOLVED FIXED242364
REGRESSION (251473@main): [watchOS] Crash when focusing an input field with spellcheck="false"
https://bugs.webkit.org/show_bug.cgi?id=242364
Summary REGRESSION (251473@main): [watchOS] Crash when focusing an input field with s...
Wenson Hsieh
Reported 2022-07-05 15:48:53 PDT
Attachments
Wenson Hsieh
Comment 1 2022-07-05 15:54:25 PDT
EWS
Comment 2 2022-07-05 19:26:08 PDT
Committed 252166@main (23bcedb746a5): <https://commits.webkit.org/252166@main> Reviewed commits have been landed. Closing PR #2100 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-05 19:27:14 PDT
Note You need to log in before you can comment on or make changes to this bug.