REGRESSION (251473@main): [watchOS] Crash when focusing an input field with spellcheck="false" https://bugs.webkit.org/show_bug.cgi?id=242364 rdar://96458889

Reviewed by Aditya Keerthi.

Add a missing `-respondsToSelector:` check before attempting to set `spellCheckingType`. `spellCheckingType` is an
optional property on the `UITextInputTraits` protocol, and (importantly) isn't implemented on watchOS.

This crash is already exercised by `fast/forms/watchos/enter-text-with-spellcheck-disabled.html`, which (unfortunately)
doesn't run in pre- or post-commit non-internal automation.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _updateTextInputTraits:]):

Canonical link: https://commits.webkit.org/252166@main